--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,9 +32,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="タップしてスタート"
-            android:textsize="20sp"
+            android:textSize="20sp"
             android:layout_gravity="center" />
-<!--        android:srcで画像を取得できる-->
+
         <ImageView
             android:id="@+id/box"
             android:layout_width="50dp"
